<resources>
    <string name="app_name">IbanCurrency</string>
    <string name="iban_validator">Iban Validator</string>
    <string name="currency_converter">Currency Converter</string>

    <string name="please_the_amount_kd_for_conversion">Please the amount(KD) for conversion</string>
    <string name="convert">Convert</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="one_kd_equalent">1 KD #value#</string>
    <string name="selection">Selection</string>

    <string name="enter_iban_number">Enter Iban number</string>
    <string name="validate">Validate</string>
    <string name="iban_validation_success">Validation Success</string>
    <string name="iban_validtion_failed">Validation Failed</string>
    <string name="validating">Validating....</string>
</resources>