<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context="com.ibancurrency.currencyconverter.presentation.CurrencyConverterFragment">
    <include
        android:id="@+id/main_progress_layout"
        layout="@layout/progress_layout"
        android:visibility="gone"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/please_the_amount_kd_for_conversion"
            android:inputType="number"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/button_convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert"
                android:layout_alignParentStart="true"
                />
            <Button
                android:id="@+id/button_refresh_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_rate"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycularview_currency_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"/>
        <include
            android:id="@+id/progress_view_layout"
            layout="@layout/progress_layout"
            tools:visibility="gone"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>